<resources>
    <string name="app_name">Connect</string>
    <string name="coder_nickname">lemon4k</string>
    <string name="user_id">Personal ID: %d</string>
    <string name="personal_info">Personal info</string>
    <string name="st_account_security">Account security</string>
    <string name="st_cloud">Cloud</string>
    <string name="st_used_storage">Used 5 GB</string>
    <string name="st_settings">Settings</string>
    <string name="st_help">Help</string>
    <string name="st_logout">Log out</string>
    <string name="st_sign_in">Sign in</string>
    <string name="st_id_uppercase">ID</string>
    <string name="st_login_hint">Username or email</string>
    <string name="st_continue">Continue</string>
    <string name="st_dont_have_an_account">Don\'t have an account?</string>
    <string name="st_unknown_error">Unknown error</string>
    <string name="st_empty_field">All fields must be filled</string>
    <string name="st_invalid_username">User with this username is not registered</string>
    <string name="st_invalid_email">User with email %s is not registered</string>
    <string name="st_password_hint">Password</string>
    <string name="st_server_unavailable">The server is temporarily unavailable. Please try again later</string>
    <string name="st_invalid_username_or_password">Invalid login or password</string>
    <string name="st_internal_server_error">Internal server error</string>
    <string name="st_check_for_updates">Check for updates</string>
    <string name="st_about">About</string>
    <string name="st_application_icon">Application icon</string>
    <string name="st_lemon_id">Lemon ID</string>
    <string name="st_version">Version %s (%s)</string>
    <string name="st_copyright">Lemon Connect. All rights reversed. ©2022</string>
    <string name="st_open_source_licenses">Open Source Licenses</string>
    <string name="st_sign_up">Sign Up</string>
    <string name="st_why_do_need_email">Your email will be used for signing in to your account</string>
    <string name="st_email">Email</string>
    <string name="st_already_have_an_account">Already have an account? Sign in</string>
    <string name="st_id">ID</string>
    <string name="st_enter_username">Enter username</string>
    <string name="st_why_do_need_username">The username will be displayed in the profile and can be used for authorization</string>
    <string name="st_username">Username</string>
    <string name="st_field_cannot_be_empty">Field cannot be empty</string>
    <string name="st_incorrect_email">Incorrect email</string>
    <string name="st_email_already_registered">User with this email is already registered</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="st_enter_password">Enter password</string>
    <string name="st_why_do_need_password">Create a strong password, it will be used for log in</string>
    <string name="st_confirm_password">Confirm password</string>
    <string name="st_password_lenght">Password length must be at least 6 characters</string>
    <string name="st_password_mismatch_error">Passwords do not match</string>
    <string name="st_username_already_registered">User with this username is already registered</string>
    <string name="st_not_found_error">Not Found</string>
    <string name="st_failed_to_load_data">Filed to load data</string>
    <string name="st_retry">Retry</string>
    <string name="st_failed_to_logout">Failed to log out. Try again later</string>
    <string name="st_confirm_logout">Do you really want to leave?</string>
    <string name="st_sign_out">Sign out</string>
    <string name="st_cancel">Cancel</string>
</resources>