<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/st_about"
        app:titleTextColor="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back"/>
    <LinearLayout
        android:layout_below="@+id/top_app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:elevation="0dp"
            app:strokeWidth="0dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/st_application_icon" />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/st_lemon_id"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/st_version"
            android:textSize="18sp"
            style="@style/SecondaryText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/open_source_licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/st_open_source_licenses"
            android:textColor="?attr/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/st_copyright"
            android:textSize="14sp"
            style="@style/SecondaryText"/>
    </LinearLayout>
</RelativeLayout>