<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SignUpStepOneFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:strokeWidth="0dp">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@mipmap/ic_launcher"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/st_sign_up"
            android:textSize="22sp"
            android:fontFamily="@font/rubik_medium"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="225dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/st_why_do_need_email"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/input_email"
            style="@style/EditTextPrimaryVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="290dp"
            android:hint="@string/st_email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"/>
        <TextView
            android:id="@+id/error_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="248dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:text="@string/st_unknown_error"
            android:textSize="12sp"
            android:maxLines="6"
            android:visibility="gone"/>
        <com.google.android.material.button.MaterialButton
            style="@style/ButtonPrimary"
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/st_continue"/>
    </LinearLayout>
    <Button
        android:id="@+id/sign_in_btn"
        style="@style/TextButtonPrimaryVariant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/st_already_have_an_account"
        android:textSize="14sp"/>

</RelativeLayout>