<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SignUpSecondFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp">
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/TextViewPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/st_id"
                    android:textSize="20sp"/>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/top_app_bar_layout"
        android:layout_centerHorizontal="true">
        <TextView
            style="@style/TextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/st_enter_username"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="225dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/st_why_do_need_username"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/input_username"
            style="@style/EditTextPrimaryVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="290dp"
            android:hint="@string/st_username"
            android:layout_gravity="center"
            android:inputType="text"
            android:autofillHints="username" />
        <TextView
            android:id="@+id/error_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="248dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:text="@string/st_unknown_error"
            android:textSize="12sp"
            android:maxLines="6"
            android:visibility="gone"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/st_continue"/>
    </LinearLayout>

</RelativeLayout>