<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SignUpFinalStepFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="5dp">
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/TextViewPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/st_id"
                    android:textSize="20sp"/>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/top_app_bar_layout"
        android:layout_centerHorizontal="true">
        <TextView
            style="@style/TextViewPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/st_enter_password"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            style="@style/SecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="225dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/st_why_do_need_password"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/data_input_card_primary">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:boxStrokeWidth="0dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/gray_dark"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector">
                <EditText
                    android:id="@+id/input_password"
                    style="@style/EditTextPrimary"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/st_password_hint"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="290dp"
                android:layout_height="1dp"
                android:background="@color/gray_for_stroke"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                app:boxStrokeWidth="0dp"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/gray_dark"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/show_password_selector">
                <EditText
                    android:id="@+id/input_confirm_password"
                    style="@style/EditTextPrimary"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/st_confirm_password"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/error_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="248dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:text="@string/st_unknown_error"
            android:textSize="12sp"
            android:maxLines="6"
            android:visibility="gone"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/st_sign_up"/>
    </LinearLayout>
</RelativeLayout>