<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignInActivity">

    <LinearLayout
        android:id="@+id/auth_form_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_sign_in"
            android:textSize="24sp"
            android:fontFamily="@font/rubik_medium"
            android:layout_gravity="center_horizontal"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="85dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/data_input_card_primary">

            <EditText
                android:id="@+id/login_input"
                style="@style/EditTextPrimary"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/st_login_hint"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorSecondaryVariant"/>

            <EditText
                android:id="@+id/password_input"
                style="@style/EditTextPrimary"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/st_password_hint"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <TextView
            android:id="@+id/error_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="248dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:text="@string/st_unknown_error"
            android:textSize="12sp"
            android:maxLines="6"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loading_pb"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginTop="18dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/st_sign_in"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/st_dont_have_an_account"
        android:textColor="#82B1FF" />

</RelativeLayout>