<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingsActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/st_settings"
        app:titleTextColor="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back"/>
    <androidx.cardview.widget.CardView
        android:layout_below="@id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnPrimary">

            <Button
                android:id="@+id/check_for_updates_btn"
                style="@style/TextButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/st_check_for_updates"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"/>
            <View
                android:id="@+id/sep1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_below="@id/check_for_updates_btn"
                android:background="?attr/colorSecondaryVariant"/>

            <Button
                android:id="@+id/about_btn"
                style="@style/TextButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/sep1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/st_about"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>